--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
     <meta property="og:url" content="https://gymplan.fit/">
     <meta property="og:title" content="GymPlan.fit | AI-Powered Custom Workout Plan Generator">
     <meta property="og:description" content="Generate a science-backed, personalized workout plan in seconds. Tailored to your goals, schedule, and equipment.">
-    <meta property="og:image" content="https://gymplan.fit/logo.png">
+    <meta property="og:image" content="https://gymplan.fit/logo.png.png">
 
     <!-- Twitter Meta Tags -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://gymplan.fit/">
     <meta property="twitter:title" content="GymPlan.fit | AI-Powered Custom Workout Plan Generator">
     <meta property="twitter:description" content="Generate a science-backed, personalized workout plan in seconds. Tailored to your goals, schedule, and equipment.">
-    <meta property="twitter:image" content="https://gymplan.fit/logo.png">
+    <meta property="twitter:image" content="https://gymplan.fit/logo.png.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="logo.png">
-    <link rel="apple-touch-icon" href="logo.png">
+    <link rel="icon" type="image/png" href="logo.png.png">
+    <link rel="apple-touch-icon" href="logo.png.png">
 
 
     <script src="https://cdn.tailwindcss.com"></script>
