--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                                 </select>
                             </div>
                             <div class="mb-6">
-                                <label for="limitations" class="block text-lg font-medium mb-3">Any injuries or limitations? (optional)</label>
+                                <label for="limitations" class="block mb-2 text-sm font-medium text-gray-200">Any specific requests, injuries, etc.? (optional)</label>
                                 <textarea id="limitations" name="limitations" rows="4" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg focus:ring-blue-500 focus:border-blue-500" placeholder="e.g., 'Bad lower back, avoid heavy deadlifts'" aria-label="Injuries or limitations"></textarea>
                             </div>
                             <div class="flex justify-between">
