--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                             </div>
                             <div class="mb-6">
                                 <label for="limitations" class="block mb-2 text-sm font-medium text-gray-200">Any specific requests, injuries, etc.? (optional)</label>
-                                <textarea id="limitations" name="limitations" rows="4" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg focus:ring-blue-500 focus:border-blue-500" placeholder="e.g., 'Bad lower back, avoid heavy deadlifts'" aria-label="Injuries or limitations"></textarea>
+                                <textarea id="limitations" name="limitations" rows="4" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg focus:ring-blue-500 focus:border-blue-500" placeholder="e.g., 'Sundays free, muscle building plus weight loss, bad lower back, avoid heavy deadlifts'" aria-label="Injuries or limitations"></textarea>
                             </div>
                             <div class="flex justify-between">
                                 <button type="button" onclick="prevStep(3)" class="px-6 py-3 font-semibold text-white rounded-lg btn-secondary" aria-label="Previous Step">Back</button>
