Improve mobile spacing for plan cards and update placeholder examples for specific requests/injuries

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                          <p class="text-gray-400 mt-2 max-w-2xl mx-auto">Here is your AI-generated workout plan. You can edit your inputs or download it.</p>
                     </div>
                    
-                    <div id="plan-details" class="grid md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 gap-8">
+                    <div id="plan-details" class="grid md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 gap-8 px-2 sm:px-0 justify-center">
                         <!-- Plan cards will be injected here -->
                     </div>
 
