--- a/index.html
+++ b/index.html
@@ -179,6 +179,21 @@
             border-radius: 0 0 8px 0;
             outline: 2px solid #fff;
         }
+        .plan-card {
+            background-color: #1f2937;
+            border: 1px solid #374151;
+            border-radius: 1rem;
+            padding: 1.5rem;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            margin-left: 1rem;
+            margin-right: 1rem;
+        }
+        @media (min-width: 640px) {
+            .plan-card {
+                margin-left: 0;
+                margin-right: 0;
+            }
+        }
     </style>
 </head>
 <body class="antialiased">
